# OpenCL-OpenGL-Particle-System

./: .gitignore  README.md
.github/workflows/: docs.yml  zip-release.yml
source/: .clang-format  .clangd  .gitignore  CMakeLists.txt  main.cpp  particles.cl
source/src/: cl_utils.h  fragment.frag  gl_utils.h  vertex.vert
source/src/glad/include/glad/: glad.h
source/src/glad/src/: glad.c
source/src/imgui/imGuIZMO/: imGuIZMOquat.cpp  imguizmo_config.h  vGizmo3D.h  vGizmo3D_config.h
source/src/openCL/: cl_gl.h
tutorial/: zensical.toml
tutorial/docs/: index.md
tutorial/docs/stylesheets/: extra.css
tutorial/site/: 404.html  index.html  search.json  sitemap.xml
